--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Poppins",sans-serif;
+    font-family: "Poppins", sans-serif;
 }
-body{
+
+body {
     background-color: blue;
 }
-.container{
+
+.container {
     background-color: #fff;
     width: 80vh;
     max-width: 37.5em;
@@ -19,15 +21,18 @@ body{
     border-radius: 0.62em;
     box-shadow: 0 1.25em 1.8em rgb(8, 21, 65, 0.25);
 }
-.container h1{
+
+.container h1 {
     margin-bottom: 20px;
 }
-.search-wrapper{
+
+.search-wrapper {
     display: grid;
     grid-template-columns: 9fr 3fr;
     gap: 1.25em;
 }
-.search-wrapper button{
+
+.search-wrapper button {
     font-size: 1em;
     background-color: #3d64e6;
     color: #fff;
@@ -35,23 +40,28 @@ body{
     border: none;
     border-radius: 1.5em;
 }
-.search-wrapper input{
+
+.search-wrapper input {
     font-size: 1em;
-    padding: 0 0.62em;border: none;
+    padding: 0 0.62em;
+    border: none;
     border-bottom: 2px solid #3d64e6;
     outline: none;
     color: #222a43;
 }
-#result{
+
+#result {
     margin-top: 1.25em;
 }
-.container .flag-img{
+
+.container .flag-img {
     display: block;
     width: 45%;
     min-width: 7.5em;
     margin: 1.8em auto 1.2em auto;
 }
-.container h2{
+
+.container h2 {
     font-weight: 600;
     color: #222a43;
     text-align: center;
@@ -59,21 +69,34 @@ body{
     letter-spacing: 2px;
     margin-bottom: 1.8em;
 }
-.data-wrapper{
+
+.data-wrapper {
     margin-bottom: 1em;
     letter-spacing: 0.3px;
 }
-.container h4{
+
+.container h4 {
     display: inline;
     font-weight: 700;
     color: #5d6274;
 }
-.container span{
+
+.container span {
     color: #5d6274;
 }
-.container h3{
+
+.container h3 {
     text-align: center;
     font-size: 1.2em;
     font-weight: 400;
     color: #ff465a;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .container {
+        width: 100%;
+       display: block;
+        
+    }
 }
